# Programowanie-strukturalne-2022

./: .gitignore  2_liczby_rosnaco.cpp  3_liczby_malejaco.cpp  CMakeLists.txt  README.md  quick_sort.cpp
quick_sort/: quick_sort.cpp
rozdzial 11/: dane.txt  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
rozdzial 9/: zad.8.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
zadania_z_programowania_w_jezyku_c_cpp_jacek_krzaczkowski/: zad_ 4_2_11.cpp  zad_3_2_12.cpp  zad_3_2_14.cpp  zad_3_2_8.cpp  zad_4_2_10.cpp  zad_5_2_24.cpp  zad_5_2_25.cpp  zad_6_2_5.cpp  zad_6_2_6.cpp  zad_7_2_7.cpp  zad_7_2_8.cpp
